// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-l-default-dark-off 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={false}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-l-default-dark-on 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={true}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-l-default-light-off 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={false}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-l-default-light-on 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={true}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-l-disabled-dark-off 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={false}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-l-disabled-dark-on 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={true}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-l-disabled-light-off 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={false}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-l-disabled-light-on 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={true}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-m-default-dark-off 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={false}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-m-default-dark-on 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={true}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-m-default-light-off 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={false}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-m-default-light-on 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={true}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-m-disabled-dark-off 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={false}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-m-disabled-dark-on 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={true}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-m-disabled-light-off 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={false}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-m-disabled-light-on 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={true}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-s-default-dark-off 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={false}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-s-default-dark-on 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={true}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-s-default-light-off 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={false}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-s-default-light-on 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={true}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-s-disabled-dark-off 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={false}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-s-disabled-dark-on 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={true}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-s-disabled-light-off 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={false}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-s-disabled-light-on 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={true}
    />
  </View>
</View>
`;

exports[`Switch — snapshot matrix rtl canary (rtlCanaryVariant x size=default x default x light x lang) default-s-default-light-fa 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-switch"
  >
    <RCTSwitch
      accessibilityLabel="x"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#333333"
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      tintColor="#333333"
      value={false}
    />
  </View>
</View>
`;
